* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
* Bug fixes (see mercurial logs for details)
* Add method to sort quantities for assignation
* Add warehouse properties to move
* Allow view location as parent of warehouse

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Allow shipments to be automatically assigned
* Rename inventory count quantity_added to quantity
* Add document source on move of product quantities by warehouse
* Add relate from assigned shipment to products quantities by warehouse
* Show quantities by warehouse for many products
* Default to ordering shipments by date
* Add delivery usage to contact mechanism
* Make customer's outgoing moves editable for same storage and output zone
* Add margin reporting
* Add products_by_locations Model

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Add picked step to customer shipment workflow
* Add cron task to reschedule past shipments
* Allow lost and found on inventory moves of shipments
* Add waste locations on warehouses
* Add warning to prevent move in the future
* Add relate to open inventory lines
* Use simplified view for moves list on shipments
* Add a relate from product to its moves
* Factorize the cost price of move for cost computation
* Fill grouping values when assigning move
* Use a single assign wizard for all shipments
* Add access rules to product quantities by warehouse
* Add moves for product quantities by warehouse
* Enforce filling cost price of move
* Rename move state from cancel to cancelled
* Rename shipment states from cancel to cancelled
* Rename inventory state from cancel to cancelled
* Override warehouse with context value for current user

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add visual on product and location quantities
* Define one lost and found location per warehouse